# These are boilerplate standard configuration options including development
# tools, notebooks and popular linters/formatters/type-checkers

# Quick start:
#   Ensure python version matches in all:
#       - pyproject.toml:project: 3.1x.*
#       - pyproject.toml:linters: py31x
#        - .pre-commit-config.yaml:language_version: python3.1x
#   Run once:
#       ./dev-scripts initialize-pre-commit.sh
#   Initialize environment (as needed)
#       source ./dev-scripts/dev-init
#   Install editable package (once)
#       uv pip install -e ".[test]"
#   Run tests
#       uv run pytest

[project]
name = "opguard"
description = "opguard Utilities"
requires-python = "==3.11.*"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "accelerate>=1.7.0",
    "bitsandbytes>=0.46.0",
    #"diffusers>=0.33.1",
    "diffusers",
    #"huggingface-hub>=0.29.1",
    "huggingface-hub==0.24.6",
    "instantstyle-plus", # optional: instantstyle-plus[with-csd-score]
    "matplotlib>=3.10.1",
    "mediapipe>=0.10.21",
    "numpy>=1.26.4",
    "opencv-contrib-python==4.11.0.86",
    "pandas>=2.2.3",
    "pillow>=11.1.0",
    "pyexiftool>=0.5.6",
    "pymediainfo>=7.0.1",
    "scikit-learn>=1.6.1",
    "scikit-video>=1.1.11",
    "scipy>=1.15.2",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.4",
    "torchvision",
    "torch",
    "tqdm>=4.67.1",
    "transformers>=4.52.4",
    "xformers>=0.0.29.post3",
    "controlnet-aux>=0.0.10",
    "requests>=2.32.5",
    "easy-dwpose>=1.0.2",
]

[dependency-groups]

dev = [
    "boto3-stubs>=1.35.81",
    "matplotlib-stubs>=0.2.0",
    "ml-dtypes>=0.4.1",
    "mypy-boto3-s3>=1.35.76.post1",
    "mypy>=1.18.2",
    "pandas-stubs>=2.2.3.241126",
    "types-pillow>=10.2.0.20240822",
    "types-python-dateutil>=2.9.0.20241206",
    "types-pytz>=2024.2.0.20241003",
    "types-pyyaml>=6.0.12.20240917",
    "types-requests>=2.32.0.20241016",
    "types-tqdm>=4.67.0.20241119",
    "ruff>=0.14.1",
    "docformatter>=1.7.7",
    "types-openpyxl>=3.1.5.20241225",
    "yamllint>=1.37.1",
    "ipykernel>=6.29.5",
    "supervision>=0.26.1",
]


notebook = [
    "ipykernel>=6.29.5",
    "jupyter>=1.1.1",
    "nbconvert>=7.16.4",
    "pandas>=2.2.2",
    "seaborn>=0.13.2",
    "matplotlib>=3.7.3",
    "statsmodels>=0.14.2",
    "jupyterlab>=3.6.8",
    "ipympl>=0.9.5",
    "itables>=2.2.4",
    "ipycache>=0.1.4",
    "nbqa>=1.9.1",
    "jupyterlab-latex>=4.3.0",
    "jupyterlab-theme-solarized-dark>=3.0.1",
    "jupyterlab-github>=3.0.1",
    "jupyterlab-spellchecker>=0.8.3",
    "ipywidgets>=8.1.3",
    "ipyplot>=1.1.2",
    "jupyterlab-git>=0.50.2",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0",  # coverage report plugin
    "pytest-xdist",
    "pytest-codeblocks>=0.17.0", # run code blocks in markdown (```python ... ```) as tests
    "pytest-doctestplus>=1.4.0", # extended doctest support (e.g. skip directives, advanced parsing, particularly for codeblocks)
    "xdoctest>=1.2.0",
    "hypothesis",
]

# To build a wheel/sdist, with:
# uv build
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# entrypoint for tests
[project.scripts]
pytest-smoke = "opguard.tests.smoke:smoke"
pytest-slow = "opguard.tests.smoke:slow"

# Pytest config (minimal and portable)
[tool.pytest.ini_options]
# Don't set pythonpath, rely on editable install
testpaths = ["src/opguard/tests"]
python_files = ["smoke.py"]
# collect functions for possible use
python_functions = ["smoke", "slow"]
# Default flags: no stdout spam, show locals on failure, fail on unknown marks
# Note: for now just runs smoke test in plain pytest
#       enable slow in plain by removing the -m below
addopts = """
  -q
  --strict-markers
  --showlocals
  --maxfail=1
  --codeblocks
  --doctest-modules
  --xdoctest
  --xdoctest-style=google
  --cov=opguard
  --cov-report=term-missing
  -m "not slow"
"""
# Declare marks
# See decorators in actual test code
# Selectively run with: pytest -m <marker>
markers = [
    "smoke: fast smoke tests that run on CPU",
    "slow: opt-in slow tests, includes GPU and Bfloat16",
]

[tool.uv]
# never use system python
python-preference = "only-managed"
# prevent duplicate (and conflicting) opencv, so use the most complete
# version: contrib (extra modules), non-headeless (has gui even if not used)
override-dependencies = [
    "opencv-python>=4.11.0.86 ; sys_platform == 'never'",
    "opencv-python-headless>=4.11.0.86 ; sys_platform == 'never'",
    "opencv-contrib-python-headless>=4.11.0.86 ; sys_platform == 'never'",
    "huggingface-hub>=0.34.0", # experimental for dwpose forced install
    #"onnxruntime-gpu==1.16.2", # experimental for dwpose forced install
    #"onnxruntime-gpu==1.22.0", # experimental for dwpose forced install, for cuda 12x
]

[tool.uv.sources]
# ensure we get cuda-enabled torch repo, must also set tool.uv.index below
# see: pytorch.org/get-started/locally: as of 02-june-2025 cuda 12.6 is
#      in mainline pytorch but not 12.8 (or 11.8)
torch = { index = "pytorch-cu"}
torchvision = { index = "pytorch-cu"}
diffusers = { git = "https://github.com/huggingface/diffusers.git", tag = "v0.33.1" }
#transformers = { git = "https://github.com/huggingface/transformers.git", tag = "v4.52.4" }
transformers = { git = "https://github.com/huggingface/transformers.git", tag = "v4.56.1" }
# Note: a private repo
#    set a store credential helper entry in .git-credentials:
#       https://<user_id>:<accesstoken>@gitlab.com
instantstyle-plus = { git = "https://github.com/bryan-westcott/instantstyle-plus-fork.git", rev="88bd1c2" }

[[tool.uv.index]]
# also set tool.uv.sources
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Allow install of a local editable copy with:
# uv pip install -e .
# Note: requires __init__.py
[tool.setuptools.packages.find]
where = ["src"]
#exclude = ["tests*"]


[tool.mypy]
python_version = "3.11"
# exclude packages without typehints
follow_imports = "skip"
files = ["src/"]
exclude = ["checkpoints/", "test/", ".idea/", "__pycache/", "dreambooth", "lcm_distill", "notebooks"]
disable_error_code = "import-untyped"
# TODO: turn this on and fix any errors found
#check_untyped_defs = true


[[tool.mypy.overrides]]
# modules that mypy has no typehints for
module = ["transformers.*", "polyfuzz", "nltk.*", "huggingface_hub.*", "statsmodels.*", "scipy.stats", "scipy.ndimage.*", "scipy.signal.*", "mediapipe", "runpod.*", "cog", "accelerate.*", "bitsandbytes", "datasets", "torchvision.*", "xformers", "skvideo.*", "prodigy_opt", "controlnet_aux"]
ignore_errors = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
src = ["src"]
exclude = [
    ".bzr",
    ".direnv",
    ".eggs",
    ".git",
    ".git-rewrite",
    ".hg",
    ".ipynb_checkpoints",
    ".ipynb",
    ".mypy_cache",
    ".nox",
    ".pants.d",
    ".pyenv",
    ".pytest_cache",
    ".pytype",
    ".ruff_cache",
    ".svn",
    ".tox",
    ".venv",
    ".vscode",
    "__pypackages__",
    "_build",
    "buck-out",
    "build",
    "dist",
    "node_modules",
    "site-packages",
    "venv",
    ".checkpoints",
    "./__pycache__/",
    "./idea/",
    ".mypy_cache",
    "./test/",
    "./idea/",
    "./mypy_cache/",
    "./test/",
    "*dreambooth*",
    "advanced_lora*",
    "lcm_distill*",
]
# Black uses 88, default is 240
line-length = 120
indent-width = 4
# Assume Python version, default is 3.8
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
exclude = [
    "*.ipynb"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.pep8-naming]
# explicitly allowed pep8 name violations, common with diffusers/opencv
ignore-names = ["H", "W", "C", "HWC3", "bboxC"]

[tool.ruff.lint.mccabe]
# Allow more complexity for R&D projects
max-complexity = 13

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Assert is used by pytest
"src/**/tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.shellcheck]
version = "0.11.0"

[tool.prettier]
# only version<3 supported by ubuntu 22.04
# only version<=2.7.1 supported by
#   https://github.com/pre-commit/mirrors-prettier/
version = "4.0.0-alpha.8"

[tool.hadolint]
version = "2.14.0"

[tool.action-validator]
version = "0.8.0"

[tool.uv-pre-commit]
version = "0.9.3"

[tool.yamlfmt]
version = "0.19.0"
