
# Quick start:
#   Run once:
#       ./dev-scripts initialize-pre-commit.sh
#   Initialize environment (as needed)
#       source ./dev-scripts/dev-init
#   Install editable package (once)
#       uv pip install -e ".[test]"
#   Run smoke test
#       uv run pytest -m smoke
#   Run all tests (slower)
#       uv run pytest

[project]
name = "opguard"
description = "opguard Utilities"
requires-python = ">=3.11,<3.13"
readme = "README.md"
version = "0.0.1"
dependencies = [
    "accelerate>=1.7.0",
    "xformers>=0.0.29.post3",
    "bitsandbytes>=0.46.0",
    "diffusers>=0.33.1",
    "transformers>=4.52.4",
    "huggingface-hub>=0.24.6",
    "numpy>=1.26.4,<3",
    "pillow>=11.1.0",
    "torch",
    "loguru",
    "controlnet-aux>=0.0.10",
    "easy-dwpose",
    "instantstyle-plus",
]

[dependency-groups]

tooling = [
    "ruff>=0.14.1",
    "mypy>=1.18.2",
    "docformatter>=1.7.7",
    "yamllint>=1.37.1",
    "supervision>=0.26.1",
    "types-pillow>=10.2.0.20240822",
    "types-requests>=2.32.0.20241016",
]


notebook = [
    "jupyterlab>=3.6.8",
    "ipykernel>=6.29.5",
]

[project.optional-dependencies]
test = [
    "pytest>=8.2",
    "pytest-cov>=5.0", # coverage report plugin
    "pytest-xdist",
    "pytest-codeblocks>=0.17.0", # run code blocks in markdown (```python ... ```) as tests
    "pytest-doctestplus>=1.4.0", # extended doctest support (e.g. skip directives, advanced parsing, particularly for codeblocks)
    "xdoctest>=1.2.0",
    "hypothesis",
    "pytest-gitignore>=1.3",
    "requests>=2.32.4",
]

# To build a wheel/sdist, with:
# uv build
[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

# entrypoint for tests
[project.scripts]
pytest-smoke = "opguard.tests.test:smoke"
pytest-vae = "opguard.tests.test:vae"
pytest-nlp = "opguard.tests.test:nlp"
pytest-control = "opguard.tests.test:control"
pytest-sd = "opguard.tests.test:sd"
pytest-cpu = "opguard.tests.test:cpu"
pytest-gpu = "opguard.tests.test:gpu"
pytest-bfloat = "opguard.tests.test:bfloat"
pytest-fp16vae = "opguard.tests.test:fp16vae"
pytest-inversion = "opguard.tests.test:inversion"
pytest-slow = "opguard.tests.test:slow"

# Pytest config (minimal and portable)
[tool.pytest.ini_options]
# Don't set pythonpath, rely on editable install
testpaths = ["src/opguard/tests"]
python_files = ["test.py"]
# collect functions for possible use
python_functions = ["smoke", "vae", "nlp", "sd", "control", "slow", "inversion", "cpu", "gpu", "bfloat16", "fp16vae"]
# Default flags: no stdout spam, show locals on failure, fail on unknown marks
addopts = """
  -q
  --strict-markers
  --showlocals
  --maxfail=1
  --codeblocks
  --doctest-modules
  --xdoctest
  --xdoctest-style=google
  --cov=opguard
  --cov-report=term-missing
"""
# Declare marks
# See decorators in actual test code
# Selectively run with: pytest -m <marker>
markers = [
    "smoke: fast smoke tests that run on CPU",
    "slow: opt-in slow tests, includes GPU and Bfloat16",
    "nlp: opt-in blip1 tests",
    "sd: opt-in sdxl tests",
    "control: opt-in controlnets tests",
    "vae: opt-in vae tests",
    "cpu: opt-in cpu test with caching using tiny vae",
    "gpu: opt-in gpu test with caching using tiny vae",
    "bfloat: opt-in bflaot16 test with caching using tiny vae",
    "fp16vae: opt-in test of fp16 fixed sdxl vae",
    "inversion: opt-in test of sdxl inversion",
]

[tool.uv]
# never use system python
python-preference = "only-managed"

[tool.uv.sources]
# ensure we get cuda-enabled torch repo, must also set tool.uv.index below
# see: pytorch.org/get-started/locally: as of 02-june-2025 cuda 12.6 is
#      in mainline pytorch but not 12.8 (or 11.8)
torch = { index = "pytorch-cu"}
torchvision = { index = "pytorch-cu"}
# Note: a private repo
#    set a store credential helper entry in .git-credentials:
#       https://<user_id>:<accesstoken>@gitlab.com
instantstyle-plus = { git = "https://github.com/bryan-westcott/instantstyle-plus-fork.git", tag = "v0.1.0" }
# Fork of easy-dwpose that supports cuda 12.x and numpy 2
easy-dwpose = { git = "https://github.com/bryan-westcott/easy-dwpose-fork.git", tag = "v1.0.2.post4" }

[[tool.uv.index]]
# also set tool.uv.sources
name = "pytorch-cu"
url = "https://download.pytorch.org/whl/cu124"
explicit = true

# Allow install of a local editable copy with:
# uv pip install -e .
# Note: requires __init__.py
[tool.setuptools.packages.find]
where = ["src"]
#exclude = ["tests*"]


[tool.mypy]
python_version = "3.11"
# exclude packages without typehints
follow_imports = "skip"
files = ["src/"]
exclude = ["checkpoints/", "test/", ".idea/", "__pycache/", "notebooks", ".vscode/"]
disable_error_code = "import-untyped"
# TODO: turn this on and fix any errors found
#check_untyped_defs = true


[[tool.mypy.overrides]]
# modules that mypy has no typehints for
module = ["transformers.*", "huggingface_hub.*", "accelerate.*", "bitsandbytes", "xformers", "controlnet_aux"]
ignore_errors = true


[tool.ruff]
# Exclude a variety of commonly ignored directories.
src = ["src"]
extend-exclude = [
    "**/checkpoints/",
    "dev-scripts/",
    ".git/",
    ".ruff_cache/",
    ".mypy_cache/",
    ".pytest_cache/",
    ".node_modules/",
    ".venv/",
    "venv/",
    "**/.ipynb_checkpoints/",
    "**/*.egg-info/**",
    ".vscode",
    "./idea/",
    "build",
    "dist",
    "site-packages",
    "__pycache__/",
    "test/",
    "tests/",
]
# Black uses 88, default is 240
line-length = 120
indent-width = 4
# Assume Python version, default is 3.8
target-version = "py311"

[tool.ruff.lint]
select = ["ALL"]
ignore = []
exclude = [
    "*.ipynb"
]
# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]
unfixable = []
# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.ruff.lint.mccabe]
# Allow more complexity for R&D projects
max-complexity = 13

[tool.ruff.format]
# Like Black, use double quotes for strings.
quote-style = "double"
# Like Black, indent with spaces, rather than tabs.
indent-style = "space"
# Like Black, respect magic trailing commas.
skip-magic-trailing-comma = false
# Like Black, automatically detect the appropriate line ending.
line-ending = "auto"
# Enable auto-formatting of code examples in docstrings. Markdown,
# reStructuredText code/literal blocks and doctests are all supported.
# This is currently disabled by default, but it is planned for this
# to be opt-out in the future.
docstring-code-format = true
# Set the line length limit used when formatting code snippets in
# docstrings.
# This only has an effect when the `docstring-code-format` setting is
# enabled.
docstring-code-line-length = "dynamic"

[tool.ruff.lint.per-file-ignores]
# Assert is used by pytest
"src/**/tests/*.py" = ["S101"]

[tool.ruff.lint.pydocstyle]
convention = "pep257"

[tool.shellcheck]
version = "0.11.0"

[tool.prettier]
# only version<3 supported by ubuntu 22.04
# only version<=2.7.1 supported by
#   https://github.com/pre-commit/mirrors-prettier/
version = "4.0.0-alpha.8"

[tool.hadolint]
version = "2.14.0"

[tool.action-validator]
version = "0.8.0"

[tool.uv-pre-commit]
version = "0.9.3"

[tool.yamlfmt]
version = "0.19.0"
